data/derived/comb/progs/unify/prog4987.ml.out
Characters 28-61:
  let fixpoint (f,b) = wwhile (fun x -> (f b, not (b = f b)),b);;
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
